syntax = "proto3";

package Protocol;

message PLAYER_INFO{
    int32 playerId = 1;
}